Add users_preference table & allow group sessions
